[package]
name = "zeit-rs"
version = "0.1.2"
authors = ["James Munns <james.munns@gmail.com>"]
description = "A CLI time tracking tool in Rust"
license = "MIT"
homepage = "https://github.com/jamesmunns/zeit-rs"
repository = "https://github.com/jamesmunns/zeit-rs"
documentation = "https://github.com/jamesmunns/zeit-rs"

[dependencies]
clap = "2"
toml = "0.2"
log = "0.3"
log4rs = "0.5"

[[bin]]
name = "zeit"
