[package]
name = "zeit-rs"
version = "0.1.2"
authors = ["James Munns <james.munns@gmail.com>"]
description = "A CLI time tracking tool in Rust"
license = "MIT"
homepage = "https://github.com/jamesmunns/zeit-rs"
repository = "https://github.com/jamesmunns/zeit-rs"
documentation = "https://github.com/jamesmunns/zeit-rs"

[dependencies]
clap = "2"
log = "0.3"
log4rs = "0.5"

toml = "0.3"
serde = "0.9"
serde_derive = "0.9"
chrono = { version = "0.3", features = ["serde"] }
uuid = { version = "0.4", features = ["serde", "v4"] }

[[bin]]
name = "zeit"
